class AppSettingsModel {
  bool darkmode;

  AppSettingsModel(this.darkmode);
}