import 'package:waultar/core/models/media/media_model.dart';
import 'package:waultar/core/models/misc/person_model.dart';
import 'package:waultar/core/models/misc/reaction_model.dart';
import 'package:waultar/core/models/profile/profile_model.dart';

import '../base_model.dart';

class MessageModel extends BaseModel {
  final PersonModel person;
  final DateTime timestamp;
  final String text;
  final MediaModel? media;
  final String type;
  final bool isSent;
  final ReactionModel reaction;
  final Duration callDuration;

  MessageModel(int id, ProfileModel profile, String raw, this.person, this.timestamp, this.text, this.media, this.type, this.isSent, this.reaction, this.callDuration) : super(id, profile, raw);
}