class TagModel {
  int id = 0;
  String name;

  TagModel(this.id, this.name);
}